<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".BasicMaskActivity">

    <TextView
        android:id="@+id/Preencha"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="Preencha os dados"
        android:textColor="#ffff"
        android:textSize="24dp"

/>

    <EditText
        android:id="@+id/RG"
        android:textColorHint="#a6a6a6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Preencha"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:ems="13"
        android:hint="@string/RGI"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />


    <EditText
        android:id="@+id/Cep"
        android:textColorHint="#a6a6a6"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/RG"
        android:ems="13"
        android:hint="@string/Cep"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content" />

    <EditText
        android:id="@+id/nomecompleto"
        android:textColorHint="#a6a6a6"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Cep"
        android:ems="13"
        android:hint="@string/nomecompleto"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content" />

    <EditText
        android:id="@+id/campo_cpf"
        android:textColorHint="#a6a6a6"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nomecompleto"
        android:ems="13"
        android:hint="@string/CPF"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content" />

    <EditText
        android:id="@+id/Anonasc"
        android:textColorHint="#a6a6a6"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/campo_cpf"
        android:ems="13"
        android:hint="@string/anodenasc"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:maxLength="4"/>

    <EditText
        android:id="@+id/dtaultima"
        android:textColorHint="#a6a6a6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Anonasc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:ems="13"
        android:hint="@string/Dataultimaconta"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/litrosultimaconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dtaultima"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:ems="13"
        android:hint="@string/litrosultimaconta"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="#a6a6a6"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/valorultima"
        android:textColorHint="#a6a6a6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/litrosultimaconta"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:ems="13"
        android:hint="@string/valordaultimaconta"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Tipodeconsumo"
        android:textColorHint="#a6a6a6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valorultima"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="13"
        android:hint="Tipo de consumo"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Cadastrar"
        style="@style/AppTheme.Button"
        android:layout_width="290dp"
        android:layout_below="@+id/Tipodeconsumo"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_color3"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="Cadastrar"
        android:textColor="@drawable/text_color"
        android:textSize="18dp"
        android:visibility="visible" />

</RelativeLayout>
    </ScrollView>